--- a/challenge-server/docker-compose.yml
+++ b/challenge-server/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   stlreader:
     build:
-      context: .
+      context: ..
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
