Introduce Dockerfile/Container

--- a/challenge-server/docker-compose.yml
+++ b/challenge-server/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
-  stlreader:
+  challenge-server:
     build:
-      context: ..
+      context: .
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
