--- a/challenge-server/Dockerfile
+++ b/challenge-server/Dockerfile
@@ -1,11 +1,11 @@
 # Use the Official Golang image
-FROM golang:1.16 as builder
+FROM golang:1.21 as builder
 
 # Choosing to workdir / will make the next commands run from the root of the container
 WORKDIR /
 
 # Copy the source code to the container
-COPY .. .
+COPY . .
 
 # Compile the Go application
 RUN go build -o main .
